# alarmeInterativo

./: CMakeLists.txt  alarmeInterativo.c  readme.md
inc/: ssd1306.h  ssd1306_i2c.c
